objects/Survey_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Headers</relationshipLabel>
        <relationshipName>Survey_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <inlineHelpText>Contact's email address when email is sent</inlineHelpText>
        <label>Contact Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Headers</relationshipLabel>
        <relationshipName>Survey_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creation_Trigger__c</fullName>
        <defaultValue>'Manual'</defaultValue>
        <description>Trigger that created this record</description>
        <label>Creation Trigger</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_is_PM__c</fullName>
        <formula>IF($User.Id = Project__r.pse__Project_Manager__r.pse__Salesforce_User__r.Id,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <formula>Project__r.Event_Location__c</formula>
        <label>Event Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Project__r.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquisium_Response_Number__c</fullName>
        <label>Inquisium Response Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent__c</fullName>
        <label>Invitation Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PowerOfOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager_First_Name__c</fullName>
        <formula>Project__r.pse__Project_Manager__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Name__c</fullName>
        <formula>Project__r.pse__Project_Manager__r.FirstName &amp; " " &amp; Project__r.pse__Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Survey Headers</relationshipLabel>
        <relationshipName>Survey_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Received1__c</fullName>
        <formula>IF(NOT(ISBLANK(Response_Received__c)), True , False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Received ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Received__c</fullName>
        <label>Response Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <inlineHelpText>This determines the specific survey that will be sent to the recipient</inlineHelpText>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent IMP</fullName>
                </value>
                <value>
                    <fullName>LL Meetings IMP</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>Hotel Program Specialists</fullName>
                </value>
                <value>
                    <fullName>MTA</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>LL Events</fullName>
                </value>
                <value>
                    <fullName>TestSurveyHeaderCloseLoop</fullName>
                </value>
                <value>
                    <fullName>Survey Build</fullName>
                </value>
                <value>
                    <fullName>Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Survey Report</fullName>
                </value>
                <value>
                    <fullName>EQB Build</fullName>
                </value>
                <value>
                    <fullName>EQB Crowdcompass/OnArrival</fullName>
                </value>
                <value>
                    <fullName>Lead Retrieval - Universal</fullName>
                </value>
                <value>
                    <fullName>EQB Satisfaction Survey</fullName>
                </value>
                <value>
                    <fullName>OSS Enterprise</fullName>
                </value>
                <value>
                    <fullName>Customer Project</fullName>
                </value>
                <value>
                    <fullName>Event Quarterback</fullName>
                </value>
                <value>
                    <fullName>OA360 PC</fullName>
                </value>
                <value>
                    <fullName>Passkey EB</fullName>
                </value>
                <value>
                    <fullName>Integrated Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <label>Survey Header</label>
    <nameField>
        <displayFormat>SH-{00000}</displayFormat>
        <label>Survey Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>